@@ -1,3 +1,6 @@
+[B]2.2.2[/B]
+Fix special episodes for banner view
+
 [B]2.2.1[/B]
 Fix only display widgets on up
 Better visibility handling for widgets
